[metadata]
name = pytorch-attention
version = 1.0.0.rc-1
author = Javier Lorenzo Díaz
description = Simple many-to-one attention in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/javierlorenzod/pytorch-attention-mechanism
project_urls =
    Bug Tracker = https://github.com/javierlorenzod/pytorch-attention-mechanism/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.5

[options.packages.find]
where = src