[metadata]
name = pytorch-attention
version = 1.0.1.rc-1
author = Javier Lorenzo Díaz
author_email=javier.lordi@gmail.com
description = Simple many-to-one attention in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
url = https://github.com/javierlorenzod/pytorch-attention-mechanism
project_urls =
    Bug Tracker = https://github.com/javierlorenzod/pytorch-attention-mechanism/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    torch>=1.7.1
python_requires = >=3.8.5
include_package_data = True
zip_safe = False
[options.packages.find]
where = src
